# Tetris

./: CMakeLists.txt  Makefile.win  README.md  about.txt  graphics.dev  graphics.layout  help.txt  tetris.c
Utils/: account.c  account.h  block.c  block.h  draw.c  draw.h  event.c  event.h  game.c  game.h  judge.c  judge.h  log.c  log.h  menu.c  menu.h  music.c  music.h  rank.c  rank.h
libgraphics/: exceptio.c  graphics.c
saves/: ljy.ter  playing.status  test.ter
